--- a/.env
+++ b/.env
@@ -10,3 +10,13 @@
   VITE_APPID=1:131037213172:web:721ab5cb425ff3c66dc9a
   VITE_MAPS_KEY=AIzaSyBuod1X7AgQk_xVDfk5MA7ZgmvIcmCvxIU
   VITE_APIKEY_CLOUDINARY=223813456665721
+
+  #TESTING
+VITE_APIKEY_TESTING=AIzaSyDg2lyupQ_qNDY33ay4Z-9yCckLoH27Tj8,
+VITE_AUTHDOMAIN=testing-db-75f3a.firebaseapp.com,
+VITE_PROJECTID=testing-db-75f3a,
+VITE_STORAGEBUCKET=testing-db-75f3a.firebasestorage.app,
+VITE_MESSAGINGSENDERID=244539407895,
+VITE_APPID=1:244539407895:web:1a3cdf96c816d98063e652,
+VITE_MEASUREMENTID=G-V5R2RJL6CF,
+VITE_APIKEY_CLOUDINARY=223813456665721
