--- a/.env.template
+++ b/.env.template
@@ -1,9 +1,12 @@
 
 
 
-VITE_APIKEY=
-VITE_AUTHDOMAIN=
-VITE_PROJECTID=
-VITE_STORAGEBUCKET=
-VITE_MESSAGINGSENDERID=
-VITE_APPID=
+  VITE_APIKEY=
+  VITE_AUTHDOMAIN=
+  VITE_DATABASEURL=
+  VITE_PROJECTID=
+  VITE_STORAGEBUCKET=
+  VITE_MESSAGINGSENDERID=
+  VITE_APPID=
+  VITE_MAPS_KEY=
+  VITE_APIKEY_CLOUDINARY=
